--- a/www/index.html
+++ b/www/index.html
@@ -175,6 +175,7 @@
     <script src="./js/lib/vue.min.js"></script>
     <script src="./js/lib/vuetify.min.js"></script>
     <script src="./js/lib/mqtt.min.js"></script>
+    <script src="./js/parser.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
