+ Added a header, just for show!

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,11 @@
 
 <body>
     <div id="app">
+        <v-toolbar dense flat>
+            <v-toolbar-title>
+                Websocket MQTT Client - Created by Ali Nagy 
+            </v-toolbar-title>
+        </v-toolbar>
         <v-app>
             <v-content>
                 <v-container>
